feat(agent): 集成 Kimi Chat 模型并优化相关功能
- 新增 Kimi Chat API 接口实现类和相关配置
- 优化 BasicAgent 类的错误处理和消息处理逻辑- 重构 QwenChatApi 类，提高代码复用性
- 更新应用配置，移除不必要的依赖